fase 9 completed
